--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "@vitejs/plugin-vue": "^1.2.1",
     "@vue/compiler-sfc": "^3.0.5",
     "autoprefixer": "^10.2.5",
+    "eslint-config-prettier": "^8.2.0",
+    "eslint-plugin-vue": "^7.9.0",
     "postcss": "^8.2.10",
+    "prettier": "2.2.1",
     "tailwindcss": "^2.1.1",
     "vite": "^2.1.5"
   }
