--- a/package.json
+++ b/package.json
@@ -7,15 +7,22 @@
     "serve": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.0.5"
+    "vue": "^3.0.5",
+    "vue-router": "^4.0.6",
+    "vuex": "^4.0.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.2.1",
     "@vue/compiler-sfc": "^3.0.5",
     "autoprefixer": "^10.2.5",
+    "eslint": "^7.24.0",
     "eslint-config-prettier": "^8.2.0",
     "eslint-plugin-vue": "^7.9.0",
     "postcss": "^8.2.10",
+    "postcss-custom-properties": "^8.0.11",
+    "postcss-import": "^14.0.1",
+    "postcss-nested": "^5.0.5",
+    "postcss-preset-env": "^6.7.0",
     "prettier": "2.2.1",
     "tailwindcss": "^2.1.1",
     "vite": "^2.1.5"
